count animation bug fixed & overlap image section added

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ body {
   @apply flex justify-between items-center;
 }
 .flex-cen {
-  @apply flex justify-center items-center gap-4 flex-wrap;
+  @apply flex justify-center items-center gap-8 lg:gap-0 flex-wrap;
 }
 
 .round-bg {
